propellor (3.2.3) UNRELEASED; urgency=medium

  * Improve extraction of gpg secret key id list, to work with gpg 2.1.
  * The propellor wrapper checks if ./config.hs exists; if so it runs
    using the configuration in the current directory, rather than
    ~/.propellor/config.hs

 -- Joey Hess <id@joeyh.name>  Fri, 11 Nov 2016 19:32:54 -0400

propellor (3.2.2) unstable; urgency=medium

  * Added Linode.serialGrub property.
  * Clean up build warnings about redundant constraints when built with ghc 8.0.
  * Added Group.hasUser property. Thanks, Daniel Brooks

 -- Joey Hess <id@joeyh.name>  Fri, 11 Nov 2016 17:54:44 -0400

propellor (3.2.1) unstable; urgency=medium

  * Simplify Debootstrap.sourceInstall since #770217 was fixed.
  * Debootstap.installed: Fix inverted logic that made this never install
    debootstrap. Thanks, mithrandi.

 -- Joey Hess <id@joeyh.name>  Mon, 03 Oct 2016 18:06:31 -0400

propellor (3.2.0) unstable; urgency=medium

  [ Sean Whitton ]
  * Using ccache with Sbuild.built & Sbuild.builtFor is now toggleable: these
    properties now take a parameter of type Sbuild.UseCcache.  (API Change)
  * Sbuild.piupartsConf: no longer takes an Apt.Url. (API Change)
  * Sbuild.piupartsConf & Sbuild.piupartsConfFor: does nothing if corresponding
    schroot not built.
    Previously, these properties built the schroot if it was missing.
  * Sbuild.built & Sbuild.piupartsConf: add an additional alias to sid chroots.
    This is for compatibility with `dgit sbuild`.
  * Further improvements to Sbuild.hs haddock.

  [ Joey Hess ]
  * Tor.hiddenService: Converted port parameter from Int to Port. (API change)
  * Tor.hiddenServiceAvailable: The hidden service hostname file may not
    be available immedaitely after configuring tor; avoid ugly error in
    this case.

 -- Joey Hess <id@joeyh.name>  Sat, 10 Sep 2016 11:39:40 -0400

propellor (3.1.2) unstable; urgency=medium

  [ Joey Hess ]
  * Ssh.knownHost: Bug fix: Only fix up the owner of the known_hosts