@@ -21,3 +21,5 @@ I can obtain the error manually as follows.  My `/tmp` is not mounted `noexec`.
     Cannot execute /bin/sh: Permission denied
 
 --spwhitton
+
+> [[fixed|done]] --[[Joey]]
