@@ -4,6 +4,9 @@ propellor (3.2.3) UNRELEASED; urgency=medium
   * The propellor wrapper checks if ./config.hs exists; if so it runs
     using the configuration in the current directory, rather than
     ~/.propellor/config.hs
+  * Debootstap: Fix too tight permissions lock down of debootstrapped
+    chroots, which prevented non-root users from doing anything in the
+    chroot.
 
  -- Joey Hess <id@joeyh.name>  Fri, 11 Nov 2016 19:32:54 -0400
 
